# fsct-host

./: Cargo.toml  Cross.toml  LICENSE-FSCT.md  NOTICE  README.md  about.toml  licenses.hbs  notice.hbs
.cargo/: config.toml
.cross/: Dockerfile.aarch64-unknown-linux-gnu  Dockerfile.arm-unknown-linux-gnueabihf  Dockerfile.armv7-unknown-linux-gnueabihf  Dockerfile.x86_64-unknown-linux-gnu
.devcontainer/: devcontainer.json
.github/workflows/: macos-build.yml  windows-build.yml
.junie/: guidelines.md
core/: Cargo.toml
core/examples/: device_manager_example.rs  driver_example.rs  fsct_descriptor_dump.rs  orchestrator_example.rs  requests_test.rs  test_bos_reading.rs
core/src/: definitions.rs  device_manager.rs  device_uuid_calculator.rs  devices_watch.rs  driver.rs  lib.rs  orchestrator.rs  player.rs  player_events.rs  player_manager.rs  player_state.rs  player_state_applier.rs  player_watch.rs  service.rs  service_entry.rs  service_state.rs  usb_device_watch.rs
core/src/ipc/: server.rs
core/src/usb/: descriptor_utils.rs  descriptors.rs  errors.rs  fsct_bos_finder.rs  fsct_device.rs  fsct_usb_interface.rs  mod.rs  requests.rs
docs/: active_player_selection.md  architecture_changes_summary.md  azure_keyvault_signing.md  device_management.md  driver-and-user-service.md  ipc_plan.md  macos-build-setup.md  proposed_architecture.md  refactor-native-driver-migration.md
examples/: console.rs  fsct_descriptor_dump.rs  gui.rs  requests_test.rs  test_bos_reading.rs
exec/: fsct_service.rs
gui/: Cargo.toml
gui/src/: lib.rs
ports/macos/: Cargo.toml
ports/macos/src/: lib.rs  media_remote.rs
ports/native/: Cargo.toml  FSCT_Driver_EULA.md
ports/native/examples/: fsct_native_gui.rs  native_platform_gui.rs
ports/native/src/: lib.rs  macos_service_main.rs  main.rs  service_main.rs  windows_service_main.rs
ports/native/src/macos/: media_remote.rs  mod.rs
ports/native/src/macos/player/: mod.rs
ports/native/src/macos/service/: mod.rs
ports/native/src/windows/: mod.rs  service.rs
ports/native/src/windows/player/: mod.rs
ports/native/src/windows/service/: cli.rs  constants.rs  install.rs  logger.rs  mod.rs  runtime.rs  standalone.rs  state.rs
ports/node/: .gitignore  .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test_module.mjs
ports/node/npm/darwin-arm64/: README.md  package.json
ports/node/npm/darwin-universal/: README.md  package.json
ports/node/npm/darwin-x64/: README.md  package.json
ports/node/npm/linux-arm-gnueabihf/: README.md  package.json
ports/node/npm/linux-arm-musleabihf/: README.md  package.json
ports/node/npm/linux-arm64-gnu/: NOTICE.txt  README.md  package.json
ports/node/npm/linux-arm64-musl/: README.md  package.json
ports/node/npm/linux-x64-gnu/: README.md  package.json
ports/node/npm/linux-x64-musl/: README.md  package.json
ports/node/npm/win32-x64-msvc/: README.md  package.json
ports/node/src/: js_types.rs  lib.rs
ports/volumio/: Cargo.toml
ports/volumio/examples/: fsct_volumio_gui.rs  volumio_gui.rs
ports/volumio/src/: lib.rs  main.rs  rest_api.rs  service_main.rs
ports/windows/: Cargo.toml
ports/windows/src/: lib.rs
script/: build_node_lib_multitarget.sh  build_volumio_service.sh  build_windows_installer.ps1  macos_service_package_builder.sh  setup_notarization_profile.sh
services/: fsct_native_service.rs
services/native/: Cargo.toml
services/native/examples/: native_platform_gui.rs
services/native/src/: lib.rs  main.rs
src/: console.rs  definitions.rs  fsct_service.rs  lib.rs  main.rs  player.rs  service_entry.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/macos/: media_remote.rs  mod.rs
src/usb/: definitions.rs  descriptor_utils.rs  descriptors.rs  fsct_bos_finder.rs  fsct_device.rs  fsct_usb_interface.rs  mod.rs  requests.rs
testing/: console.rs  fsct_descriptor_dump.rs  gui.rs  requests_test.rs  test_bos_reading.rs  test_dfu_access.rs
