[workspace]
resolver = "3"
members = ["core", "gui", "ports/volumio", "ports/native"]

[workspace.package]
version = "0.2.0"
authors = ["Paweł Gorgoń", "HEM Sp. z o.o."]
description = "Tools supporting Ferrum Streaming Control Technology"

[workspace.dependencies]
async-trait = "0.1.88"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
env_logger = "0.11"
fsct_core = { path = "core" }
log = "0.4.25"


