[workspace]
resolver = "3"
members = ["core", "gui", "ports/volumio", "ports/native", "ports/node"]

[workspace.package]
version = "0.2.3"
authors = ["Paweł Gorgoń", "HEM Sp. z o.o."]
description = "Tools supporting Ferrum Streaming Control Technology"

[workspace.dependencies]
async-trait = "0.1.88"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
env_logger = "0.11"
fsct_core = { path = "core" }
log = "0.4.25"
thiserror = "2.0.12"
anyhow = "1.0.98"


[profile.release]
lto = true
strip = "symbols"
