[workspace]
resolver = "3"
members = ["core", "ports/native", "ports/node"]

[workspace.package]
version = "0.2.4"
authors = ["Paweł Gorgoń", "HEM Sp. z o.o."]
description = "Host implementation of Ferrum Streaming Control Technology™ (FSCT). Additional licensing terms apply as described in LICENSE-FSCT.md."
license = "Apache-2.0"
edition = "2024"
publish = false

[workspace.dependencies]
async-trait = "0.1.88"
tokio = { version = "1.44", features = ["full"] }
futures = "0.3"
env_logger = "0.11"
fsct_core = { path = "core" }
log = "0.4.25"
thiserror = "2.0.12"
anyhow = "1.0.98"

[profile.release]
lto = true
strip = "symbols"
