[package]
name = "fsct_core"
edition = "2024"
version.workspace = true
authors.workspace = true

[dependencies]
log = "0.4.25"
nusb = { git = "https://github.com/HEM-RnD/nusb.git", tag = "v0.1.14-hem" }
uuid = { version = "1.16.0", features = ["v4"] }
bitflags = "2.8.0"
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
