[package]
name = "fsct_core"
description = "FSCT Host core library which includes usb definitions and communication of Ferrum Streaming Control Technology™ (FSCT). Additional licensing terms apply as described in LICENSE-FSCT.md. "
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
log = "0.4.25"
nusb = { git = "https://github.com/HEM-RnD/nusb.git", tag = "v0.1.14-hem" }
parity-tokio-ipc = "0.9.0"
msgpack-rpc = "0.4.2"
uuid = { version = "1.17.0", features = ["v4", "v5"] }
bitflags = "2.8.0"
futures.workspace = true
async-trait.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.12", features = ["compat"] }
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
env_logger = "0.11.8"