[package]
name = "fsct_gui"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
description = "GUI library for testing player bindings without connecting device."

[dependencies]
eframe = "0.31.1"
fsct_core.workspace = true
tokio.workspace = true
anyhow.workspace = true