[package]
name = "fsct_native_service"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
fsct_core.workspace = true
tokio.workspace = true

[dev-dependencies]
env_logger = "0.11.8"
fsct_gui = { path = "../../gui" }

[target.'cfg(target_os = "windows")'.dependencies]
fsct_windows_port = { path = "../../ports/windows" }

[target.'cfg(target_os = "macos")'.dependencies]
fsct_macos_port = { path = "../../ports/macos" }